--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "diff": "^7.0.0",
     "framer-motion": "^11.5.6",
+    "html-react-parser": "^5.1.16",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
